--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -1,11 +1,11 @@
 color_scheme:
   colors:
-  - {color: '#6750A4', name: Primary}
-  - {color: '#EADDFF', name: Primary Container}
-  - {color: '#FFFFFF', name: On Primary}
-  - {color: '#21005E', name: On Primary Container}
-  - {color: '#625B71', name: Secondary}
-  - {color: '#E8DEF8', name: Secondary Container}
+  - {color: '#5D4037', name: 'Primary background, headers'}
+  - {color: '#D7CCC8', name: 'Accent background, cards'}
+  - {color: '#A1887F', name: 'Highlights, buttons, borders'}
+  - {color: '#3E2723', name: 'Text, navigation bar'}
+  - {color: '#F5F5DC', name: 'Backgrounds, contrast balance'}
+  - {color: '#8D6E63', name: Secondary accent color}
   - {color: '#FFFFFF', name: On Secondary}
   - {color: '#1E192B', name: On Secondary Container}
   - {color: '#7D5260', name: Tertiary}
@@ -13,9 +13,9 @@ color_scheme:
   - {color: '#FFFFFF', name: On Tertiary}
   - {color: '#370B1E', name: On Tertiary Container}
   - {color: '#B3261E', name: Error}
-  - {color: '#FFFBFE', name: Background}
-  - {color: '#FFFBFE', name: Surface}
-  - {color: '#1C1B1F', name: On Background}
+  - {color: '#5D4037', name: Background}
+  - {color: '#F5F5DC', name: Surface}
+  - {color: '#F5F5DC', name: On Background}
   - {color: '#1C1B1F', name: On Surface}
   - {color: '#E7E0EC', name: Surface Variant}
   - {color: '#49454E', name: On Surface Variant}
