Created laptop-593673.jpg; Edited landingPage

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,5 +1,6 @@
 unique_ids:
   assets:
+    laptop-593673.jpg: '1739055099735287188672421.29645'
     standard-page.html: IOUWV7AEVM3LSF5B5PPSSJLWKY7CT63L
     theme.css: PAM4WXWDNKOOK74NZHK5TZ4XYF7M4OWL
   forms:
