--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,7 +1,9 @@
 unique_ids:
   assets:
     laptop-593673.jpg: '1739055099735287188672421.29645'
+    new_file.html: '1739062240644222436313954.41586'
     standard-page.html: IOUWV7AEVM3LSF5B5PPSSJLWKY7CT63L
+    staticLanding.html: QU5CYD65R5CJZIZ5BJCWAK44ZZEJ4HS5
     theme.css: PAM4WXWDNKOOK74NZHK5TZ4XYF7M4OWL
   forms:
     landingPage: '1739049458553322143461121.27856'
