Update landing page to use 'home' form and enhance HTML content structure

--- a/client_code/home/form_template.yaml
+++ b/client_code/home/form_template.yaml
@@ -1,10 +1,11 @@
-components: []
 container:
-  properties:
-    html: |-
-      <center style="font-style:italic; color:#888; margin: 3em;">
-        (Insert your custom HTML here)
-      </center>
-      <div anvil-slot="default"></div>
   type: HtmlTemplate
+  properties: {}
+  components:
+    - name: html_content
+      type: HTML
+      properties:
+        html: ''
+        align: left
+        tooltip: ''
 is_package: true
