--- a/client_code/landing/form_template.yaml
+++ b/client_code/landing/form_template.yaml
@@ -1,10 +1,70 @@
 components: []
 container:
   properties:
-    html: |-
-      <center style="font-style:italic; color:#888; margin: 3em;">
-        (Insert your custom HTML here)
-      </center>
-      <div anvil-slot="default"></div>
+    html: |
+      <!DOCTYPE html>
+      <html lang="en">
+      <head>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <title>Willow River Automation Services</title>
+          <link rel="stylesheet" href="_/theme/styles.css">
+          <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+      </head>
+      <body>
+
+          <header class="navbar">
+              <h1 class="logo">Willow River Automation Services</h1>
+              <nav>
+                  <ul>
+                      <li><a href="#">Home</a></li>
+                      <li><a href="#">About Us</a></li>
+                      <li><a href="#">Services</a></li>
+                      <li><a href="#">Contact</a></li>
+                      <li><a href="#" class="login-button">Client Login</a></li>
+                  </ul>
+              </nav>
+          </header>
+
+          <section class="hero">
+              <div class="hero-overlay"></div> <!-- Background Overlay -->
+              <div class="hero-text">
+                  <h2>Streamline Your Business with Expert Automation</h2>
+                  <p>Optimize workflows, increase efficiency, and save time with Willow River Automation Services.</p>
+                  <button class="cta-button">Discover Our Services</button>
+              </div>
+          </section>
+
+          <section class="features">
+              <div class="feature">
+                  <h3>Workflow Automation</h3>
+                  <p>Eliminate manual processes and optimize efficiency.</p>
+              </div>
+              <div class="feature">
+                  <h3>Process Optimization</h3>
+                  <p>Identify and improve business workflows.</p>
+              </div>
+              <div class="feature">
+                  <h3>Systems Integration</h3>
+                  <p>Seamlessly connect your business software and tools.</p>
+              </div>
+          </section>
+
+          <section class="impact">
+              <h2>See the Impact of Automation</h2>
+              <div class="impact-metrics">
+                  <div class="metric"><strong>10,000+</strong> Automation Runs</div>
+                  <div class="metric"><strong>500+ Hours</strong> Saved</div>
+                  <div class="metric"><strong>+15%</strong> Efficiency Increase</div>
+              </div>
+          </section>
+
+          <footer>
+              <p>&copy; 2025 Willow River Automation Services. All Rights Reserved.</p>
+              <a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a>
+          </footer>
+
+      </body>
+      </html>
   type: HtmlTemplate
 is_package: true
