Created home; Deleted landingPage

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -6,8 +6,8 @@ unique_ids:
     styles.css: '1739067859670697729708629.7964'
     theme.css: PAM4WXWDNKOOK74NZHK5TZ4XYF7M4OWL
   forms:
+    home: '1739068736850106130055843.67041'
     landing: '1739067126204881442661780.9094'
-    landingPage: '1739068647395178065617553.808'
   modules: {}
   scripts: {}
   server_modules: {}
