--- a/client_code/landing/form_template.yaml
+++ b/client_code/landing/form_template.yaml
@@ -10,6 +10,38 @@ container:
           <title>Willow River Automation Services</title>
           <link rel="stylesheet" href="_/theme/styles.css">
           <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+          <style>
+              /* Hero Section with Background Image */
+              .hero {
+                  position: relative;
+                  background: url('_/theme/laptop-593673.jpg') no-repeat center center/cover;
+                  height: 80vh;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  text-align: center;
+                  color: white;
+                  padding: 20px;
+              }
+
+              .hero-overlay {
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                  background: rgba(0, 0, 0, 0.6);
+              }
+
+              .hero-text {
+                  position: relative;
+                  z-index: 2;
+                  background: rgba(0, 0, 0, 0.5);
+                  padding: 30px;
+                  border-radius: 10px;
+                  max-width: 60%;
+              }
+          </style>
       </head>
       <body>
 
@@ -21,7 +53,7 @@ container:
                       <li><a href="#">About Us</a></li>
                       <li><a href="#">Services</a></li>
                       <li><a href="#">Contact</a></li>
-                      <li><a href="#" class="login-button">Client Login</a></li>
+                      <li><a href="#" class="login-button">Login</a></li>
                   </ul>
               </nav>
           </header>
