--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -14,7 +14,7 @@ color_scheme:
   - {color: '#370B1E', name: On Tertiary Container}
   - {color: '#B3261E', name: Error}
   - {color: '#5D4037', name: Background}
-  - {color: '#F5F5DC', name: Surface}
+  - {color: '#5D4037', name: Surface}
   - {color: '#F5F5DC', name: On Background}
   - {color: '#1C1B1F', name: On Surface}
   - {color: '#E7E0EC', name: Surface Variant}
