Add event bindings for click handling in About Us and Landing form templates

--- a/client_code/aboutUs/form_template.yaml
+++ b/client_code/aboutUs/form_template.yaml
@@ -161,5 +161,7 @@ container:
 
       </center>
       <div anvil-slot="default"></div>
+  event_bindings:
+    click: handle_click
   type: HtmlTemplate
 is_package: true
